--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
+    "react-game-kit": "^1.0.4",
     "react-redux": "^5.0.6",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.17",
